--- a/client/src/App.css
+++ b/client/src/App.css
@@ -138,6 +138,8 @@
 }
 .user-categories .eui-label{
   margin-right: 5px;
+  margin-top: 5px; 
+  display: inline-block;
 }
 .add-new-category{
   cursor: pointer;
