--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,11 +11,6 @@ background: -webkit-linear-gradient(to right, #414345, #232526) !important;  /* 
 background: linear-gradient(to right, #414345, #232526) !important; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 }
-.hydrated{
-  background: #485563;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to left, #29323c, #485563) !important;  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to left, #29323c, #485563) !important; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-}
 
 .prepayment-item-expansion-content form{
   margin-top: 20px;
@@ -217,4 +212,10 @@ background: linear-gradient(to right, #414345, #232526) !important; /* W3C, IE 1
 }
 .brand-logo-img{
   height: 30px;
+}
+
+@media screen and (max-width: 720px) {
+  .home-container .stats-container{
+    display: none; 
+  }
 }
