--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,7 @@
 html, body, #root{
-  height: 100vh;
+  min-height: 100vh;
+  width: 100vw;
+  background: #f2f4f8;
 }
 body {
   margin: 0;
@@ -9,7 +11,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
